<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame1"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="225dp"
        android:text="@string/buttonAdd_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/buttonSub_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/buttonMulti_text"
        android:textSize="20sp" />
</LinearLayout>