<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/frame1"
    android:orientation="vertical"
    tools:context=".ResultActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:text="@string/text_Congrats"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/textView_Result"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="24sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

       <Button
           android:id="@+id/buttonAgain"
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:layout_weight="0.5"
           android:background="@drawable/button_shape"
           android:text="@string/button_playAgain"
           android:textColor="@color/green"
           android:textSize="20sp"
           app:backgroundTint="@null"/>

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/button_Exit"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:backgroundTint="@null"/>

    </LinearLayout>

</LinearLayout>