<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/frame1"
    tools:context=".SubActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="Score:"
            android:textColor="@color/green"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textViewScoreSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="0"
            android:textColor="@color/green"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="Life:"
            android:textColor="@color/green"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textViewLifeSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="3"
            android:textColor="@color/green"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="Time:"
            android:textColor="@color/green"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textViewTimeSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="60"
            android:textColor="@color/green"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestionSub"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:background="@color/green"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextAnswerSub"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/green4"
        android:hint="@string/text_hint"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOkSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/button_Ok"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/buttonNextSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/button_Next"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:backgroundTint="@null" />


    </LinearLayout>

</LinearLayout>